Fixed some of the gui logic and the clustering and distribution of tasks into the cluster.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1925 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -62,7 +62,7 @@ max.geohash.levels=11
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=300000
+delay=1800000
 # The period between notifications for timed tasks
 period=60000
 
