--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -90,7 +90,7 @@
                                     <fileset dir="../libs/src/main/resources/indexes/production"/>
                                 </copy>
 
-                                <copy todir="ikube/integration" failonerror="true" verbose="false">
+                                <!--<copy todir="ikube/integration" failonerror="true" verbose="false">
                                     <fileset dir="../libs/src/main/resources/indexes/integration"/>
                                 </copy>
                                 <copy todir="../core/ikube/integration" failonerror="true" verbose="false">
@@ -101,7 +101,7 @@
                                 </copy>
                                 <copy todir="../../ikube/integration" failonerror="true" verbose="false">
                                     <fileset dir="../libs/src/main/resources/indexes/integration"/>
-                                </copy>
+                                </copy>-->
 
                                 <copy todir="ikube/analytics" failonerror="true" verbose="false">
                                     <fileset dir="../libs/src/main/resources/analytics"/>
@@ -116,9 +116,9 @@
                                     <fileset dir="../libs/src/main/resources/analytics"/>
                                 </copy>
 
-                                <copy todir="../war/ikube/twitter" failonerror="true" verbose="true">
+                                <!--<copy todir="../war/ikube/twitter" failonerror="true" verbose="true">
                                     <fileset dir="../libs/src/main/resources/indexes/twitter"/>
-                                </copy>
+                                </copy>-->
                             </target>
                         </configuration>
                         <goals>
