Fixed some of the gui logic and the clustering and distribution of tasks into the cluster.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1928 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -155,9 +155,9 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 #ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaPostgres
 
 # Grid properties
-hz-instance-name=ikube
-hz-group-name=ikube
-hz-group-password=ikube
+hz-instance-name=ikube-dev
+hz-group-name=ikube-dev
+hz-group-password=ikube-dev
 hz-management-center-enabled=false
 hz-management-center-url=http://localhost:8080/hazelcast
 hz-network-port=8020
