--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,15 @@
 			<url>file:/home/michael/.m2/repository</url>
 		</site>
 		<repository>
-			<id>ikube</id>
-			<name>ikube-releases</name>
+			<id>libs-release-local</id>
+			<name>libs-release-local</name>
 			<url>http://ikube.be/artifactory/libs-release-local</url>
 		</repository>
+        <snapshotRepository>
+            <id>libs-snapshot-local</id>
+            <name>libs-snapshot-local</name>
+            <url>http://ikube.be/artifactory/libs-snapshot-local</url>
+        </snapshotRepository>
 	</distributionManagement>
 
 	<properties>
@@ -1166,7 +1171,20 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>net.schmizz</groupId>
+            <artifactId>sshj</artifactId>
+            <version>0.8.1</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jzlib</artifactId>
+            <version>1.1.3</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<repositories>
 		<repository>
