--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -62,7 +62,7 @@ max.geohash.levels=11
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=1800000
+delay=60000
 # The period between notifications for timed tasks
 period=60000
 
