Fixed some of the gui logic and the clustering and distribution of tasks into the cluster.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1937 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -63,6 +63,10 @@
                             <workingDirectory>../</workingDirectory>
                             <includePluginDependencies>true</includePluginDependencies>
                             <includeProjectDependencies>true</includeProjectDependencies>
+                            <keepAlive>false</keepAlive>
+                            <cleanupDaemonThreads>true</cleanupDaemonThreads>
+                            <daemonThreadJoinTimeout>60000</daemonThreadJoinTimeout>
+                            <stopUnresponsiveDaemonThreads>true</stopUnresponsiveDaemonThreads>
                         </configuration>
                         <goals>
                             <goal>java</goal>
