Fixed some of the gui logic and the clustering and distribution of tasks into the cluster.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1938 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -55,9 +55,13 @@
                         <configuration>
                             <mainClass>ikube.deploy.Deployer</mainClass>
                             <arguments>
+                                <!-- The number of directories to go up for the dot folder -->
                                 <argument>.</argument>
+                                <!-- The name of the configuration file for the deployment servers -->
                                 <argument>deployer.xml</argument>
+                                <!-- Whether to execute the main class, i.e. do the deployment -->
                                 <argument>true</argument>
+                                <!-- Don't know -->
                                 <argument>-classpath</argument>
                             </arguments>
                             <workingDirectory>../</workingDirectory>
