Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1941 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -24,7 +24,7 @@
     </parent>
 
     <properties>
-        <phase>deploy</phase>
+        <phase>site</phase>
         <packaging>jar</packaging>
         <generate-pom>true</generate-pom>
         <repository-id>ikube</repository-id>
