--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -18,3 +18,7 @@ tomcat-two-webapps=${tomcat-two}/webapps
 tomcat-three=/home/apache-tomcat-6.0.29-3
 tomcat-three-bin=${tomcat-three}/bin
 tomcat-three-webapps=${tomcat-three}/webapps
+
+tomcat-production=/home/apache-tomcat-7.0.42
+tomcat-production-bin=${tomcat-production}/bin
+tomcat-production-webapps=${tomcat-production}/webapps
