--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -109,27 +109,27 @@ postgres.jdbc.driver=org.postgresql.Driver
 
 # H2 database, this is for distribution and production. This
 # database is what ikube will use in the field
-ikube.dataSource=nonXaDataSourceH2
-ikube.persistenceUnit=IkubePersistenceUnitH2
-ikube.dataSourceType=H2
-ikube.jdbc.userid=${h2.jdbc.userid}
-ikube.jdbc.password=${h2.jdbc.password}
-ikube.jdbc.url=${h2.jdbc.url}
-ikube.jdbc.driver=${h2.jdbc.driver}
-ikube.jdbc.dictionary=h2(batchLimit=1000)
-ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
+#ikube.dataSource=nonXaDataSourceH2
+#ikube.persistenceUnit=IkubePersistenceUnitH2
+#ikube.dataSourceType=H2
+#ikube.jdbc.userid=${h2.jdbc.userid}
+#ikube.jdbc.password=${h2.jdbc.password}
+#ikube.jdbc.url=${h2.jdbc.url}
+#ikube.jdbc.driver=${h2.jdbc.driver}
+#ikube.jdbc.dictionary=h2(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
-#ikube.dataSource=nonXaDataSourceDb2
-#ikube.persistenceUnit=IkubePersistenceUnitDb2
-#ikube.dataSourceType=DB2
-#ikube.jdbc.userid=${db2.jdbc.userid}
-#ikube.jdbc.password=${db2.jdbc.password}
-#ikube.jdbc.url=${db2.jdbc.url}
-#ikube.jdbc.driver=${db2.jdbc.driver}
-#ikube.jdbc.dictionary=db2(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
+ikube.dataSource=nonXaDataSourceDb2
+ikube.persistenceUnit=IkubePersistenceUnitDb2
+ikube.dataSourceType=DB2
+ikube.jdbc.userid=${db2.jdbc.userid}
+ikube.jdbc.password=${db2.jdbc.password}
+ikube.jdbc.url=${db2.jdbc.url}
+ikube.jdbc.driver=${db2.jdbc.driver}
+ikube.jdbc.dictionary=db2(batchLimit=1000)
+ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
 
 # Oracle database, this database is for testing essentially as
 # there is always an instance running on the server
@@ -155,9 +155,9 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 #ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaPostgres
 
 # Grid properties
-hz-instance-name=ikube-dev
-hz-group-name=ikube-dev
-hz-group-password=ikube-dev
+hz-instance-name=ikube-production
+hz-group-name=ikube-production
+hz-group-password=ikube-production
 hz-management-center-enabled=false
 hz-management-center-url=http://localhost:8080/hazelcast
 hz-network-port=8020
