Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1944 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -116,9 +116,9 @@
                                     <fileset dir="../libs/src/main/resources/analytics"/>
                                 </copy>
 
-                                <!--<copy todir="../war/ikube/twitter" failonerror="true" verbose="true">
+                                <copy todir="../war/ikube/twitter" failonerror="true" verbose="true">
                                     <fileset dir="../libs/src/main/resources/indexes/twitter"/>
-                                </copy>-->
+                                </copy>
                             </target>
                         </configuration>
                         <goals>
