--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -12,7 +12,7 @@ merge.factor=100
 buffered.docs=100
 max.field.length=10000
 max.read.length=10000000
-index.root=/mnt/sdb
+index.root=/home
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
@@ -62,7 +62,7 @@ max.geohash.levels=11
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=600000
+delay=15000
 # The period between notifications for timed tasks
 period=60000
 
@@ -109,27 +109,27 @@ postgres.jdbc.driver=org.postgresql.Driver
 
 # H2 database, this is for distribution and production. This
 # database is what ikube will use in the field
-#ikube.dataSource=nonXaDataSourceH2
-#ikube.persistenceUnit=IkubePersistenceUnitH2
-#ikube.dataSourceType=H2
-#ikube.jdbc.userid=${h2.jdbc.userid}
-#ikube.jdbc.password=${h2.jdbc.password}
-#ikube.jdbc.url=${h2.jdbc.url}
-#ikube.jdbc.driver=${h2.jdbc.driver}
-#ikube.jdbc.dictionary=h2(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
+ikube.dataSource=nonXaDataSourceH2
+ikube.persistenceUnit=IkubePersistenceUnitH2
+ikube.dataSourceType=H2
+ikube.jdbc.userid=${h2.jdbc.userid}
+ikube.jdbc.password=${h2.jdbc.password}
+ikube.jdbc.url=${h2.jdbc.url}
+ikube.jdbc.driver=${h2.jdbc.driver}
+ikube.jdbc.dictionary=h2(batchLimit=1000)
+ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
-ikube.dataSource=nonXaDataSourceDb2
-ikube.persistenceUnit=IkubePersistenceUnitDb2
-ikube.dataSourceType=DB2
-ikube.jdbc.userid=${db2.jdbc.userid}
-ikube.jdbc.password=${db2.jdbc.password}
-ikube.jdbc.url=${db2.jdbc.url}
-ikube.jdbc.driver=${db2.jdbc.driver}
-ikube.jdbc.dictionary=db2(batchLimit=1000)
-ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
+#ikube.dataSource=nonXaDataSourceDb2
+#ikube.persistenceUnit=IkubePersistenceUnitDb2
+#ikube.dataSourceType=DB2
+#ikube.jdbc.userid=${db2.jdbc.userid}
+#ikube.jdbc.password=${db2.jdbc.password}
+#ikube.jdbc.url=${db2.jdbc.url}
+#ikube.jdbc.driver=${db2.jdbc.driver}
+#ikube.jdbc.dictionary=db2(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
 
 # Oracle database, this database is for testing essentially as
 # there is always an instance running on the server
