Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1946 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -12,7 +12,7 @@ merge.factor=100
 buffered.docs=100
 max.field.length=10000
 max.read.length=10000000
-index.root=/home
+index.root=/mnt/sdb
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
@@ -62,7 +62,7 @@ max.geohash.levels=11
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=15000
+delay=600000
 # The period between notifications for timed tasks
 period=60000
 
@@ -155,9 +155,9 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 #ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaPostgres
 
 # Grid properties
-hz-instance-name=ikube-production
-hz-group-name=ikube-production
-hz-group-password=ikube-production
+hz-instance-name=ikube-dev
+hz-group-name=ikube-dev
+hz-group-password=ikube-dev
 hz-management-center-enabled=false
 hz-management-center-url=http://localhost:8080/hazelcast
 hz-network-port=8020
