--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -3,6 +3,9 @@ ikube-war=ikube.war
 project-directory=
 resources-directory=code/libs/src/main/resources
 
+# The ip address of the system test server, 64 core
+server-system-ip=192.168.1.10
+
 tomcat=/home/apache-tomcat-7.0.42
 tomcat-bin=${tomcat}/bin
 tomcat-webapps=${tomcat}/webapps
@@ -18,6 +21,9 @@ tomcat-two-webapps=${tomcat-two}/webapps
 tomcat-three=/home/apache-tomcat-6.0.29-3
 tomcat-three-bin=${tomcat-three}/bin
 tomcat-three-webapps=${tomcat-three}/webapps
+
+# The ip address of the production server with Jenkins etc...
+server-production-ip=192.168.1.8
 
 tomcat-production=/home/apache-tomcat-7.0.42
 tomcat-production-bin=${tomcat-production}/bin
