--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -13,6 +13,7 @@ tomcat-webapps=${tomcat}/webapps
 tomcat-one=/home/apache-tomcat-6.0.29-1
 tomcat-one-bin=${tomcat-one}/bin
 tomcat-one-webapps=${tomcat-one}/webapps
+tomcat-one-startup=. /etc/profile;chmod 777 -R ${tomcat-one};cd ${tomcat-one-bin};nohup ./catalina.sh start &;sleep 15;
 
 tomcat-two=/home/apache-tomcat-6.0.29-2
 tomcat-two-bin=${tomcat-two}/bin
