Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1956 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -6,6 +6,9 @@ resources-directory=code/libs/src/main/resources
 # The ip address of the system test server, 64 core
 server-system-ip=192.168.1.10
 
+profile=. /etc/profile;
+startup=nohup ./startup.sh &;sleep 10;
+
 tomcat=/home/apache-tomcat-7.0.42
 tomcat-bin=${tomcat}/bin
 tomcat-webapps=${tomcat}/webapps
@@ -13,18 +16,20 @@ tomcat-webapps=${tomcat}/webapps
 tomcat-one=/home/apache-tomcat-6.0.29-1
 tomcat-one-bin=${tomcat-one}/bin
 tomcat-one-webapps=${tomcat-one}/webapps
-tomcat-one-startup=. /etc/profile;chmod 777 -R ${tomcat-one};cd ${tomcat-one-bin};nohup ./catalina.sh start &;sleep 15;
+tomcat-one-startup=${profile}chmod 777 -R ${tomcat-one};cd ${tomcat-one-bin};${startup}
 
 tomcat-two=/home/apache-tomcat-6.0.29-2
 tomcat-two-bin=${tomcat-two}/bin
 tomcat-two-webapps=${tomcat-two}/webapps
+tomcat-two-startup=${profile}chmod 777 -R ${tomcat-two};cd ${tomcat-two-bin};${startup}
 
 tomcat-three=/home/apache-tomcat-6.0.29-3
 tomcat-three-bin=${tomcat-three}/bin
 tomcat-three-webapps=${tomcat-three}/webapps
+tomcat-three-startup=${profile}chmod 777 -R ${tomcat-three};cd ${tomcat-three-bin};${startup}
 
 # The ip address of the production server with Jenkins etc...
-server-production-ip=192.168.1.8
+server-production-ip=192.168.1.20
 
 tomcat-production=/home/apache-tomcat-7.0.42
 tomcat-production-bin=${tomcat-production}/bin
