--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -6,27 +6,37 @@ resources-directory=code/libs/src/main/resources
 # The ip address of the system test server, 64 core
 server-system-ip=192.168.1.10
 
-profile=. /etc/profile;
-startup=nohup ./startup.sh &;sleep 10;
+profile=. /etc/profile
+shutdown=./shutdown.sh
+startup=nohup ./startup.sh &
 
 tomcat=/home/apache-tomcat-7.0.42
 tomcat-bin=${tomcat}/bin
 tomcat-webapps=${tomcat}/webapps
+tomcat-shutdown=${profile};cd ${tomcat-bin};${shutdown}
+tomcat-kill=kill -9 $(ps aux | grep ${tomcat} | grep -v grep | awk '{print $2}')
+tomcat-startup=${profile};chmod 777 -R ${tomcat};cd ${tomcat-bin};${startup}
 
 tomcat-one=/home/apache-tomcat-6.0.29-1
 tomcat-one-bin=${tomcat-one}/bin
 tomcat-one-webapps=${tomcat-one}/webapps
-tomcat-one-startup=${profile}chmod 777 -R ${tomcat-one};cd ${tomcat-one-bin};${startup}
+tomcat-one-shutdown=${profile};cd ${tomcat-one-bin};${shutdown}
+tomcat-one-kill=kill -9 $(ps aux | grep ${tomcat-one} | grep -v grep | awk '{print $2}')
+tomcat-one-startup=${profile};chmod 777 -R ${tomcat-one};cd ${tomcat-one-bin};${startup}
 
 tomcat-two=/home/apache-tomcat-6.0.29-2
 tomcat-two-bin=${tomcat-two}/bin
 tomcat-two-webapps=${tomcat-two}/webapps
-tomcat-two-startup=${profile}chmod 777 -R ${tomcat-two};cd ${tomcat-two-bin};${startup}
+tomcat-two-shutdown=${profile};cd ${tomcat-two-bin};${shutdown}
+tomcat-two-kill=kill -9 $(ps aux | grep ${tomcat-two} | grep -v grep | awk '{print $2}')
+tomcat-two-startup=${profile};chmod 777 -R ${tomcat-two};cd ${tomcat-two-bin};${startup}
 
 tomcat-three=/home/apache-tomcat-6.0.29-3
 tomcat-three-bin=${tomcat-three}/bin
 tomcat-three-webapps=${tomcat-three}/webapps
-tomcat-three-startup=${profile}chmod 777 -R ${tomcat-three};cd ${tomcat-three-bin};${startup}
+tomcat-three-shutdown=${profile};cd ${tomcat-three-bin};${shutdown}
+tomcat-three-kill=kill -9 $(ps aux | grep ${tomcat-two} | grep -v grep | awk '{print $2}')
+tomcat-three-startup=${profile};chmod 777 -R ${tomcat-three};cd ${tomcat-three-bin};${startup}
 
 # The ip address of the production server with Jenkins etc...
 server-production-ip=192.168.1.20
@@ -34,3 +44,6 @@ server-production-ip=192.168.1.20
 tomcat-production=/home/apache-tomcat-7.0.42
 tomcat-production-bin=${tomcat-production}/bin
 tomcat-production-webapps=${tomcat-production}/webapps
+tomcat-production-shutdown=${profile};cd ${tomcat-production-bin};${shutdown}
+tomcat-production-kill=kill -9 $(ps aux | grep ${tomcat-production} | grep -v grep | awk '{print $2}')
+tomcat-production-startup=${profile};chmod 777 -R ${tomcat-production};cd ${tomcat-production-bin};${startup}
