Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1960 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -8,19 +8,19 @@ max.age=6000
 # These parameters are destined for the index context
 buffer.size=256
 compound.file=true
-merge.factor=100
-buffered.docs=100
-max.field.length=10000
-max.read.length=10000000
+merge.factor=10
+buffered.docs=10
+max.field.length=1000
+max.read.length=1000000
 index.root=/mnt/sdb
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
-jdbc.batch.size=10000
-internet.batch.size=100
-file.batch.size=100
-file.max.read.length=100000
+jdbc.batch.size=1000
+internet.batch.size=10
+file.batch.size=10
+file.max.read.length=1000000
 throttle=0
-max.actions=5
+max.actions=1
 # Max index size before another one is started in megs
 max.index.size=10000
 
@@ -31,19 +31,19 @@ not.stored=false
 vectored=true
 unpack.zips=true
 
-max.memory=96000
+max.memory=32000
 
 wiki.read.length=1000000
 wiki.index.age=100800
 
 max.revisions=1000000
-max.exceptions=10
+max.exceptions=100
 
 # The number of threads for each indexing component/connector
-table.handler.threads=5
-internet.handler.threads=25
-filesystem.handler.threads=1
-email.handler.threads=1
+table.handler.threads=4
+internet.handler.threads=10
+filesystem.handler.threads=3
+email.handler.threads=3
 
 # These parameters are client specific
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(Backup).*|.*(/sys).*|.*(/media).*|.*(/mnt).*|.*(/dev).*|.*(/lib).*|.*(/run).*|.*(.jar).*|.*(.zip).*|.*(.war).*|.*(/etc).*|.*(.plugins).*|.*(autofs).*|.*(/home/ikube).*
@@ -64,7 +64,7 @@ max.geohash.levels=11
 # The delay before the scheduled tasks start executing
 delay=600000
 # The period between notifications for timed tasks
-period=60000
+period=600000
 
 # The number of minutes before the throttle is increased
 cpu.load.period=3
@@ -93,7 +93,7 @@ h2.jdbc.url=jdbc:h2:file:ikube/ikube;DB_CLOSE_ON_EXIT=FALSE
 
 #General JDBC settings
 jdbc.minPoolSize=10
-jdbc.maxPoolSize=100
+jdbc.maxPoolSize=1000
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=60000
 jdbc.numHelperThreads=10
@@ -116,7 +116,7 @@ ikube.jdbc.userid=${h2.jdbc.userid}
 ikube.jdbc.password=${h2.jdbc.password}
 ikube.jdbc.url=${h2.jdbc.url}
 ikube.jdbc.driver=${h2.jdbc.driver}
-ikube.jdbc.dictionary=h2(batchLimit=1000)
+ikube.jdbc.dictionary=h2(batchLimit=10000)
 ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 
 # Db2 database, this database is for testing essentially as
