Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1969 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -16,28 +16,32 @@ tomcat-bin=${tomcat}/bin
 tomcat-webapps=${tomcat}/webapps
 tomcat-shutdown=${profile};cd ${tomcat-bin};${shutdown};${sleep}
 tomcat-kill=kill -9 $(ps aux | grep ${tomcat} | grep -v grep | awk '{print $2}');${sleep}
-tomcat-startup=${profile};chmod 777 -R ${tomcat};cd ${tomcat-bin};${startup};${sleep}
+tomcat-chmod=chmod 777 -R ${tomcat}
+tomcat-startup=${profile};cd ${tomcat-bin};${startup};${sleep}
 
 tomcat-one=/home/apache-tomcat-6.0.29-1
 tomcat-one-bin=${tomcat-one}/bin
 tomcat-one-webapps=${tomcat-one}/webapps
 tomcat-one-shutdown=${profile};cd ${tomcat-one-bin};${shutdown};${sleep}
 tomcat-one-kill=kill -9 $(ps aux | grep ${tomcat-one} | grep -v grep | awk '{print $2}');${sleep}
-tomcat-one-startup=${profile};chmod 777 -R ${tomcat-one};cd ${tomcat-one-bin};${startup};${sleep}
+tomcat-one-chmod=chmod 777 -R ${tomcat-one}
+tomcat-one-startup=${profile};cd ${tomcat-one-bin};${startup};${sleep}
 
 tomcat-two=/home/apache-tomcat-6.0.29-2
 tomcat-two-bin=${tomcat-two}/bin
 tomcat-two-webapps=${tomcat-two}/webapps
 tomcat-two-shutdown=${profile};cd ${tomcat-two-bin};${shutdown};${sleep}
 tomcat-two-kill=kill -9 $(ps aux | grep ${tomcat-two} | grep -v grep | awk '{print $2}');${sleep}
-tomcat-two-startup=${profile};chmod 777 -R ${tomcat-two};cd ${tomcat-two-bin};${startup};${sleep}
+tomcat-two-chmod=chmod 777 -R ${tomcat-two}
+tomcat-two-startup=${profile};cd ${tomcat-two-bin};${startup};${sleep}
 
 tomcat-three=/home/apache-tomcat-6.0.29-3
 tomcat-three-bin=${tomcat-three}/bin
 tomcat-three-webapps=${tomcat-three}/webapps
 tomcat-three-shutdown=${profile};cd ${tomcat-three-bin};${shutdown};${sleep}
 tomcat-three-kill=kill -9 $(ps aux | grep ${tomcat-two} | grep -v grep | awk '{print $2}');${sleep}
-tomcat-three-startup=${profile};chmod 777 -R ${tomcat-three};cd ${tomcat-three-bin};${startup};${sleep}
+tomcat-three-chmod=chmod 777 -R ${tomcat-three}
+tomcat-three-startup=${profile};cd ${tomcat-three-bin};${startup};${sleep}
 
 # The ip address of the production server with Jenkins etc...
 server-production-ip=192.168.1.20
@@ -47,4 +51,5 @@ tomcat-production-bin=${tomcat-production}/bin
 tomcat-production-webapps=${tomcat-production}/webapps
 tomcat-production-shutdown=${profile};cd ${tomcat-production-bin};${shutdown};${sleep}
 tomcat-production-kill=kill -9 $(ps aux | grep ${tomcat-production} | grep -v grep | awk '{print $2}');${sleep}
-tomcat-production-startup=${profile};chmod 777 -R ${tomcat-production};cd ${tomcat-production-bin};${startup};${sleep}
+tomcat-production-chmod=chmod 777 -R ${tomcat-production}
+tomcat-production-startup=${profile};cd ${tomcat-production-bin};${startup};${sleep}
