--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -6,7 +6,7 @@ resources-directory=code/libs/src/main/resources
 # The ip address of the system test server, 64 core
 server-system-ip=192.168.1.10
 
-sleep=sleep 10
+sleep=
 profile=. /etc/profile
 shutdown=./shutdown.sh
 startup=nohup ./startup.sh &
@@ -17,7 +17,7 @@ tomcat-webapps=${tomcat}/webapps
 tomcat-shutdown=${profile};cd ${tomcat-bin};${shutdown};${sleep}
 tomcat-kill=kill -9 $(ps aux | grep ${tomcat} | grep -v grep | awk '{print $2}');${sleep}
 tomcat-chmod=chmod 777 -R ${tomcat}
-tomcat-startup=${profile};cd ${tomcat-bin};${startup};${sleep}
+tomcat-startup=${profile};cd ${tomcat-bin};${startup}
 
 tomcat-one=/home/apache-tomcat-6.0.29-1
 tomcat-one-bin=${tomcat-one}/bin
@@ -25,7 +25,7 @@ tomcat-one-webapps=${tomcat-one}/webapps
 tomcat-one-shutdown=${profile};cd ${tomcat-one-bin};${shutdown};${sleep}
 tomcat-one-kill=kill -9 $(ps aux | grep ${tomcat-one} | grep -v grep | awk '{print $2}');${sleep}
 tomcat-one-chmod=chmod 777 -R ${tomcat-one}
-tomcat-one-startup=${profile};cd ${tomcat-one-bin};${startup};${sleep}
+tomcat-one-startup=${profile};cd ${tomcat-one-bin};${startup}
 
 tomcat-two=/home/apache-tomcat-6.0.29-2
 tomcat-two-bin=${tomcat-two}/bin
@@ -33,7 +33,7 @@ tomcat-two-webapps=${tomcat-two}/webapps
 tomcat-two-shutdown=${profile};cd ${tomcat-two-bin};${shutdown};${sleep}
 tomcat-two-kill=kill -9 $(ps aux | grep ${tomcat-two} | grep -v grep | awk '{print $2}');${sleep}
 tomcat-two-chmod=chmod 777 -R ${tomcat-two}
-tomcat-two-startup=${profile};cd ${tomcat-two-bin};${startup};${sleep}
+tomcat-two-startup=${profile};cd ${tomcat-two-bin};${startup}
 
 tomcat-three=/home/apache-tomcat-6.0.29-3
 tomcat-three-bin=${tomcat-three}/bin
@@ -41,7 +41,7 @@ tomcat-three-webapps=${tomcat-three}/webapps
 tomcat-three-shutdown=${profile};cd ${tomcat-three-bin};${shutdown};${sleep}
 tomcat-three-kill=kill -9 $(ps aux | grep ${tomcat-two} | grep -v grep | awk '{print $2}');${sleep}
 tomcat-three-chmod=chmod 777 -R ${tomcat-three}
-tomcat-three-startup=${profile};cd ${tomcat-three-bin};${startup};${sleep}
+tomcat-three-startup=${profile};cd ${tomcat-three-bin};${startup}
 
 # The ip address of the production server with Jenkins etc...
 server-production-ip=192.168.1.20
@@ -52,4 +52,4 @@ tomcat-production-webapps=${tomcat-production}/webapps
 tomcat-production-shutdown=${profile};cd ${tomcat-production-bin};${shutdown};${sleep}
 tomcat-production-kill=kill -9 $(ps aux | grep ${tomcat-production} | grep -v grep | awk '{print $2}');${sleep}
 tomcat-production-chmod=chmod 777 -R ${tomcat-production}
-tomcat-production-startup=${profile};cd ${tomcat-production-bin};${startup};${sleep}
+tomcat-production-startup=${profile};cd ${tomcat-production-bin};${startup}
