Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1971 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -6,9 +6,10 @@ resources-directory=code/libs/src/main/resources
 # The ip address of the system test server, 64 core
 server-system-ip=192.168.1.10
 
-sleep=
+sleep=sleep 10
 profile=. /etc/profile
 shutdown=./shutdown.sh
+# Note to self: There must be nothing after this statement.
 startup=nohup ./startup.sh &
 
 tomcat=/home/apache-tomcat-7.0.42
