Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1973 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -8,17 +8,17 @@ max.age=6000
 # These parameters are destined for the index context
 buffer.size=256
 compound.file=true
-merge.factor=1000
-buffered.docs=1000
+merge.factor=100
+buffered.docs=100
 max.field.length=1000
-max.read.length=1000000
+max.read.length=100000
 index.root=/mnt/sdb
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=1000
 internet.batch.size=10
 file.batch.size=10
-file.max.read.length=1000000
+file.max.read.length=100000
 throttle=0
 max.actions=1
 # Max index size before another one is started in megs
@@ -35,7 +35,7 @@ max.memory=32000
 
 wiki.read.length=1000000
 wiki.index.age=100800
-
+²
 max.revisions=1000000
 max.exceptions=100
 
@@ -62,9 +62,9 @@ max.geohash.levels=11
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=600000
+delay=15000
 # The period between notifications for timed tasks
-period=600000
+period=60000
 
 # The number of minutes before the throttle is increased
 cpu.load.period=3
