Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1974 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -20,9 +20,9 @@ internet.batch.size=10
 file.batch.size=10
 file.max.read.length=100000
 throttle=0
-max.actions=1
+max.actions=5
 # Max index size before another one is started in megs
-max.index.size=10000
+max.index.size=5000
 
 # These are client specific for Lucene
 analyzed=true
@@ -31,11 +31,11 @@ not.stored=false
 vectored=true
 unpack.zips=true
 
-max.memory=32000
+max.memory=4000
 
 wiki.read.length=1000000
 wiki.index.age=100800
-²
+
 max.revisions=1000000
 max.exceptions=100
 
@@ -46,16 +46,20 @@ filesystem.handler.threads=3
 email.handler.threads=3
 
 # These parameters are client specific
-files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(Backup).*|.*(/sys).*|.*(/media).*|.*(/mnt).*|.*(/dev).*|.*(/lib).*|.*(/run).*|.*(.jar).*|.*(.zip).*|.*(.war).*|.*(/etc).*|.*(.plugins).*|.*(autofs).*|.*(/home/ikube).*
-internet.excluded.pattern=.*(/search).*|.*(r=).*|.*(terminate).*|.*(startup).*|.*(feedback).*|.*(resultaat).*
+files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(pwds).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(backup).*|.*(/sys).*|.*(/media).*|.*(/mnt).*|.*(/dev).*|.*(/lib).*|.*(/run).*|.*(/etc).*|.*(.plugins).*|.*(autofs).*
+internet.excluded.pattern=.*(/search).*|.*(r=).*|.*(terminate).*|.*(startup).*|.*(feedback).*|.*(trunk).*
 
 language.word.lists.directory=./ikube/common/languages
 language.word.lists.directory.index=./ikube/common/languages/index
 
 searcher.web.service.url=http://ikube.be/ikube/service/search/json
 
-# The start and end tier of the geohash
-max.geohash.levels=11
+# The number of levels in the geohash tree. This corresponds to the
+# accurracy of the searches, but has a dramatic effect on the performance
+# of the queries, specifically 26 levels will give an accurracy of about
+# one metre and 11 levels about 50 metres. We set the default quite low as
+# accurracy is probably the biggest issue
+max.geohash.levels=6
 
 ################################################
 ## These properties should generally not be modified by clients               ##
