--- a/code/libs/src/main/resources/environments/prod/spring.properties
+++ b/code/libs/src/main/resources/environments/prod/spring.properties
@@ -15,7 +15,7 @@ max.read.length=1000000
 index.root=/home
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
-jdbc.batch.size=1000
+jdbc.batch.size=10000
 internet.batch.size=10
 file.batch.size=10
 file.max.read.length=1000000
@@ -55,7 +55,7 @@ language.word.lists.directory.index=./ikube/common/languages/index
 searcher.web.service.url=http://ikube.be/ikube/service/search/json
 
 # The start and end tier of the geohash
-max.geohash.levels=6
+max.geohash.levels=9
 
 ################################################
 ## These properties should generally not be modified by clients               ##
@@ -165,7 +165,6 @@ hz-network-port-auto-increment=true
 hz-multicast-enabled=true
 hz-multicast-group=224.1.2.3
 
-
 hz-tcp-ip-enabled=false
 hz-interfaces-enabled=true
 hz-tcp-ip-interface=192.168.1.*
@@ -184,3 +183,8 @@ hz-time-to-live-seconds=60
 
 hz-map-store-enabled=true
 hz-map-store-write-delay=3
+
+consumer-key=WSQs59mLxb9mGFcPKtJMyw
+consumer-secret=lHfsHqI8IrdpRINHTsZwH7cnqz8pgN7uNt9Jz8bE66Q
+token=2257682162-Z4HFFXnmucyRS3TuCTPE3dOpr2qEYuaE5WiExOp
+token-secret=6YdLo8Udm5SVMO3WGX1753xnKdGp5eBalQBtcKTb19CpI
