--- a/code/libs/src/main/resources/environments/sys/spring.properties
+++ b/code/libs/src/main/resources/environments/sys/spring.properties
@@ -184,3 +184,8 @@ hz-time-to-live-seconds=60
 
 hz-map-store-enabled=true
 hz-map-store-write-delay=3
+
+consumer-key=Sohh43DylUwaXr7smSojBA
+consumer-secret=90xubtexbSwhHBbKXM62pF4QfJnz1NWVkpevwde3Qxo
+token=380355068-JIMLrQyZglGs4WLXo2UShCmXMAMjWeaiZ15ZJkrp
+token-secret=OyhI9UyioglNWrhJnQQWY2ULmNtt9Azfl70z0l8jOPM
