Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1980 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -59,7 +59,8 @@ searcher.web.service.url=http://ikube.be/ikube/service/search/json
 # of the queries, specifically 26 levels will give an accurracy of about
 # one metre and 11 levels about 50 metres. We set the default quite low as
 # accurracy is probably the biggest issue
-max.geohash.levels=6
+max.geohash.levels=7
+max-geohash-levels-twitter=7
 
 ################################################
 ## These properties should generally not be modified by clients               ##
