--- a/code/libs/src/main/resources/environments/prod/spring.properties
+++ b/code/libs/src/main/resources/environments/prod/spring.properties
@@ -56,6 +56,7 @@ searcher.web.service.url=http://ikube.be/ikube/service/search/json
 
 # The start and end tier of the geohash
 max.geohash.levels=9
+max-geohash-levels-twitter=7
 
 ################################################
 ## These properties should generally not be modified by clients               ##
