--- a/code/libs/src/main/resources/environments/sys/spring.properties
+++ b/code/libs/src/main/resources/environments/sys/spring.properties
@@ -6,19 +6,19 @@
 max.age=6000
 
 # These parameters are destined for the index context
-buffer.size=128
+buffer.size=256
 compound.file=true
-merge.factor=100
-buffered.docs=100
+merge.factor=1000
+buffered.docs=1000
 max.field.length=1000
-max.read.length=100000
+max.read.length=1000000
 index.root=/mnt/sdb
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=1000
-internet.batch.size=10
-file.batch.size=10
-file.max.read.length=100000
+internet.batch.size=100
+file.batch.size=100
+file.max.read.length=1000000
 throttle=0
 max.actions=10
 # Max index size before another one is started in megs
@@ -37,7 +37,7 @@ wiki.read.length=1000000
 wiki.index.age=100800
 
 max.revisions=1000000
-max.exceptions=100
+max.exceptions=1000
 
 # The number of threads for each indexing component/connector
 table.handler.threads=4
@@ -55,7 +55,8 @@ language.word.lists.directory.index=./ikube/common/languages/index
 searcher.web.service.url=http://ikube.be/ikube/service/search/json
 
 # The start and end tier of the geohash
-max.geohash.levels=9
+max.geohash.levels=7
+max-geohash-levels-twitter=7
 
 ################################################
 ## These properties should generally not be modified by clients               ##
