--- a/pom.xml
+++ b/pom.xml
@@ -1150,12 +1150,38 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>-->
-        <dependency>
+        <!--<dependency>
             <groupId>niocchi</groupId>
             <artifactId>niocchi</artifactId>
             <version>1.1</version>
             <type>jar</type>
             <scope>compile</scope>
+        </dependency>-->
+        <dependency>
+            <groupId>flaxcrawler</groupId>
+            <artifactId>flaxcrawler</artifactId>
+            <version>1.1.0</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>dsiutils</groupId>
+            <artifactId>dsiutils</artifactId>
+            <version>1.0.10</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>fastutil</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>5.1.5</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sleepycat</groupId>
+            <artifactId>je</artifactId>
+            <version>4.0.92</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
