Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1997 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -16,7 +16,7 @@ tomcat=/home/apache-tomcat-7.0.42
 tomcat-bin=${tomcat}/bin
 tomcat-webapps=${tomcat}/webapps
 tomcat-shutdown=${profile};cd ${tomcat-bin};${shutdown}
-tomcat-kill=kill -9 $(ps aux | grep ${tomcat} | grep -v grep | awk '{print $2}')
+tomcat-kill=pkill -f '${tomcat}'
 tomcat-chmod=chmod 777 -R ${tomcat}
 tomcat-startup=${profile};cd ${tomcat-bin};${startup}
 
@@ -24,7 +24,7 @@ tomcat-one=/home/apache-tomcat-6.0.29-1
 tomcat-one-bin=${tomcat-one}/bin
 tomcat-one-webapps=${tomcat-one}/webapps
 tomcat-one-shutdown=${profile};cd ${tomcat-one-bin};${shutdown}
-tomcat-one-kill=kill -9 $(ps aux | grep ${tomcat-one} | grep -v grep | awk '{print $2}')
+tomcat-one-kill=pkill -f '${tomcat-one}'
 tomcat-one-chmod=chmod 777 -R ${tomcat-one}
 tomcat-one-startup=${profile};cd ${tomcat-one-bin};${startup}
 
@@ -32,7 +32,7 @@ tomcat-two=/home/apache-tomcat-6.0.29-2
 tomcat-two-bin=${tomcat-two}/bin
 tomcat-two-webapps=${tomcat-two}/webapps
 tomcat-two-shutdown=${profile};cd ${tomcat-two-bin};${shutdown}
-tomcat-two-kill=kill -9 $(ps aux | grep ${tomcat-two} | grep -v grep | awk '{print $2}')
+tomcat-two-kill=pkill -f '${tomcat-two}'
 tomcat-two-chmod=chmod 777 -R ${tomcat-two}
 tomcat-two-startup=${profile};cd ${tomcat-two-bin};${startup}
 
@@ -40,7 +40,7 @@ tomcat-three=/home/apache-tomcat-6.0.29-3
 tomcat-three-bin=${tomcat-three}/bin
 tomcat-three-webapps=${tomcat-three}/webapps
 tomcat-three-shutdown=${profile};cd ${tomcat-three-bin};${shutdown}
-tomcat-three-kill=kill -9 $(ps aux | grep ${tomcat-two} | grep -v grep | awk '{print $2}')
+tomcat-three-kill=pkill -f '${tomcat-three}'
 tomcat-three-chmod=chmod 777 -R ${tomcat-three}
 tomcat-three-startup=${profile};cd ${tomcat-three-bin};${startup}
 
@@ -51,6 +51,6 @@ tomcat-production=/home/apache-tomcat-7.0.42
 tomcat-production-bin=${tomcat-production}/bin
 tomcat-production-webapps=${tomcat-production}/webapps
 tomcat-production-shutdown=${profile};cd ${tomcat-production-bin};${shutdown}
-tomcat-production-kill=kill -9 $(ps aux | grep ${tomcat-production} | grep -v grep | awk '{print $2}')
+tomcat-production-kill=pkill -f '${tomcat-production}'
 tomcat-production-chmod=chmod 777 -R ${tomcat-production}
 tomcat-production-startup=${profile};cd ${tomcat-production-bin};${startup}
