Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1998 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -6,51 +6,56 @@ resources-directory=code/libs/src/main/resources
 # The ip address of the system test server, 64 core
 server-system-ip=192.168.1.10
 
-sleep=10000
+sleep=3000
 profile=. /etc/profile
 shutdown=./shutdown.sh
 # Note to self: There must be nothing after this statement.
 startup=nohup ./startup.sh &
 
-tomcat=/home/apache-tomcat-7.0.42
+tomcat-name=apache-tomcat-7.0.42
+tomcat=/home/${tomcat-name}
 tomcat-bin=${tomcat}/bin
 tomcat-webapps=${tomcat}/webapps
 tomcat-shutdown=${profile};cd ${tomcat-bin};${shutdown}
-tomcat-kill=pkill -f '${tomcat}'
+tomcat-kill=pkill -f '${tomcat-name}'
 tomcat-chmod=chmod 777 -R ${tomcat}
 tomcat-startup=${profile};cd ${tomcat-bin};${startup}
 
-tomcat-one=/home/apache-tomcat-6.0.29-1
+tomcat-name-one=apache-tomcat-6.0.29-1
+tomcat-one=/home/${tomcat-name-one}
 tomcat-one-bin=${tomcat-one}/bin
 tomcat-one-webapps=${tomcat-one}/webapps
 tomcat-one-shutdown=${profile};cd ${tomcat-one-bin};${shutdown}
-tomcat-one-kill=pkill -f '${tomcat-one}'
+tomcat-one-kill=pkill -f '${tomcat-name-one}'
 tomcat-one-chmod=chmod 777 -R ${tomcat-one}
 tomcat-one-startup=${profile};cd ${tomcat-one-bin};${startup}
 
-tomcat-two=/home/apache-tomcat-6.0.29-2
+tomcat-name-two=apache-tomcat-6.0.29-2
+tomcat-two=/home/${tomcat-name-two}
 tomcat-two-bin=${tomcat-two}/bin
 tomcat-two-webapps=${tomcat-two}/webapps
 tomcat-two-shutdown=${profile};cd ${tomcat-two-bin};${shutdown}
-tomcat-two-kill=pkill -f '${tomcat-two}'
+tomcat-two-kill=pkill -f '${tomcat-name-two}'
 tomcat-two-chmod=chmod 777 -R ${tomcat-two}
 tomcat-two-startup=${profile};cd ${tomcat-two-bin};${startup}
 
-tomcat-three=/home/apache-tomcat-6.0.29-3
+tomcat-name-three=apache-tomcat-6.0.29-3
+tomcat-three=/home/${tomcat-name-three}
 tomcat-three-bin=${tomcat-three}/bin
 tomcat-three-webapps=${tomcat-three}/webapps
 tomcat-three-shutdown=${profile};cd ${tomcat-three-bin};${shutdown}
-tomcat-three-kill=pkill -f '${tomcat-three}'
+tomcat-three-kill=pkill -f '${tomcat-name-three}'
 tomcat-three-chmod=chmod 777 -R ${tomcat-three}
 tomcat-three-startup=${profile};cd ${tomcat-three-bin};${startup}
 
 # The ip address of the production server with Jenkins etc...
 server-production-ip=192.168.1.20
 
-tomcat-production=/home/apache-tomcat-7.0.42
+tomcat-name-production=apache-tomcat-7.0.42
+tomcat-production=/home/${tomcat-name-production}
 tomcat-production-bin=${tomcat-production}/bin
 tomcat-production-webapps=${tomcat-production}/webapps
 tomcat-production-shutdown=${profile};cd ${tomcat-production-bin};${shutdown}
-tomcat-production-kill=pkill -f '${tomcat-production}'
+tomcat-production-kill=pkill -f '${tomcat-name-production}'
 tomcat-production-chmod=chmod 777 -R ${tomcat-production}
 tomcat-production-startup=${profile};cd ${tomcat-production-bin};${startup}
