Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@2002 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -64,7 +64,7 @@
                                 <!-- Don't know -->
                                 <argument>-classpath</argument>
                             </arguments>
-                            <workingDirectory>../</workingDirectory>
+                            <!--<workingDirectory>../</workingDirectory>-->
                             <includePluginDependencies>true</includePluginDependencies>
                             <includeProjectDependencies>true</includeProjectDependencies>
                             <keepAlive>false</keepAlive>
